Downloads/2025ccp1-team33-main/test/parser/bad/b_bad_for_loop.py
# RUN: %chocopy-llvm %s 2>&1 | FileCheck %s.err

for x, y in lst:
    print(x)
    print(y)

print("OK")